cmake_minimum_required(VERSION 3.16)
#project(week1.1)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.1 1.cpp)
#
#project(week1.2)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.2 2.cpp)
#
#project(week1.3)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.3 3.cpp)
#
#project(week1.4)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.4 4.cpp)
#
#project(week1.5)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.5 5.cpp)
#
#project(week1.6)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.6 6.cpp)
#
#project(week1.7)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.7 7.cpp)

#project(week1.8)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.8 8.cpp)

#project(week1.9)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.9 9.cpp)

#project(week1.10)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.10 10.cpp)

#project(week1.11)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.11 11.cpp)

#project(week1.12)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.12 12.cpp)

#project(week1.13)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(week1.13 13.cpp)