cmake_minimum_required(VERSION 3.16)

project(week2.1)
set(CMAKE_CXX_STANDARD 14)
#add_executable(week2.1 1.cpp)
#add_executable(week2.1 2.cpp)
#add_executable(week2.1 3.cpp)
#add_executable(week2.1 4.cpp)
#add_executable(week2.1 5.cpp)
#add_executable(week2.1 6.cpp)
#add_executable(week2.1 7.cpp)
#add_executable(week2.1 8.cpp)
add_executable(week2.1 9.cpp)
#add_executable(week2.1 10.cpp)